--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
                 android:layout_width="150dp"
                 android:layout_height="130dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/mainbtn2"
+                android:src="@drawable/reportbtn"
                 app:layout_constraintTop_toBottomOf="@+id/DiagnoseButton"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/MyPageBtn"
@@ -99,7 +99,7 @@
         android:layout_width="150dp"
         android:layout_height="130dp"
         android:scaleType="centerInside"
-        android:src="@drawable/mainbtn3"
+        android:src="@drawable/chatbtn"
         app:layout_constraintTop_toBottomOf="@+id/CommunityBtn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -113,7 +113,7 @@
         android:layout_width="150dp"
         android:layout_height="130dp"
         android:scaleType="centerInside"
-        android:src="@drawable/mainbtn4"
+        android:src="@drawable/mypagebtn"
         app:layout_constraintTop_toBottomOf="@+id/ReportBtn"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
