--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -27,6 +27,7 @@
         android:backgroundTint="@color/white"
         android:src="@drawable/backbtn"
         android:textColor="#28BEEE"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -43,6 +44,7 @@
         android:src="@drawable/homebtn"
         android:textColor="#28BEEE"
         android:backgroundTint="@color/white"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
