--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -44,7 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그인"
-        android:textSize="30dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
         android:width="300dp"
         android:height="70dp"
         android:backgroundTint="@color/white"
