--- a/app/src/main/res/layout/num_notsearch.xml
+++ b/app/src/main/res/layout/num_notsearch.xml
@@ -37,6 +37,7 @@
         android:backgroundTint="@color/white"
         android:src="@drawable/backbtn"
         android:textColor="#28BEEE"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -53,6 +54,7 @@
         android:backgroundTint="@color/white"
         android:src="@drawable/homebtn"
         android:textColor="#28BEEE"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
