--- a/app/src/main/res/layout/reporthistory.xml
+++ b/app/src/main/res/layout/reporthistory.xml
@@ -35,6 +35,7 @@
         android:backgroundTint="@color/white"
         android:src="@drawable/backbtn"
         android:textColor="#28BEEE"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
