--- a/app/src/main/res/layout/reportpage.xml
+++ b/app/src/main/res/layout/reportpage.xml
@@ -38,6 +38,7 @@
         android:backgroundTint="@color/white"
         android:src="@drawable/backbtn"
         android:textColor="#28BEEE"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -55,6 +56,7 @@
         android:backgroundTint="@color/white"
         android:src="@drawable/homebtn"
         android:textColor="#28BEEE"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
