--- a/app/src/main/res/layout/community_post.xml
+++ b/app/src/main/res/layout/community_post.xml
@@ -196,25 +196,29 @@
         </LinearLayout>
     </ScrollView>
 
-    <EditText
-        android:id="@+id/add_replytext"
-        android:layout_width="350dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="댓글을 입력해주세요"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:orientation="horizontal"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginStart="3dp"
-        android:contentDescription="addreplybutton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/add_replytext"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        <EditText
+            android:id="@+id/add_replytext"
+            android:layout_width="350dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="10dp"
+            android:ems="10"
+            android:inputType="text"
+            android:text="댓글을 입력해주세요" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginStart="3dp"
+            android:contentDescription="addreplybutton"
+            app:srcCompat="@android:drawable/ic_menu_send" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
