--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -55,7 +55,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <TextView
@@ -69,7 +69,7 @@
             android:layout_marginLeft="65dp" />
 
         <Button
-            android:id="@+id/signinButton"
+            android:id="@+id/signButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="회원가입하기"
@@ -82,6 +82,16 @@
 
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+
+
 
 
 
