--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -65,7 +65,8 @@
         android:layout_height="60dp"
         android:orientation="horizontal"
         android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/add_question"
@@ -75,7 +76,7 @@
             android:ems="10"
             android:inputType="text"
             android:text="궁금한 점을 입력해주세요"
-            app:layout_constraintStart_toStartOㄹ="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
             android:id="@+id/imageButton"
