--- a/app/src/main/res/layout/qna_non.xml
+++ b/app/src/main/res/layout/qna_non.xml
@@ -69,9 +69,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nohistoryimg"
         android:layout_marginTop="50dp"/>
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <ImageButton
+        android:id="@+id/AddBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerInside"
         android:src="@drawable/plusbtn"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
