--- a/app/src/main/res/layout/community_writing.xml
+++ b/app/src/main/res/layout/community_writing.xml
@@ -76,7 +76,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/phonelable"
+                android:id="@+id/titleLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="60dp"
@@ -87,7 +87,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/TopView" />
 
             <EditText
-                android:id="@+id/OptionalPhoneNumber"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="60dp"
@@ -95,7 +95,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="60dp"
                 android:width="300dp"
-                android:hint="01012345678"
+                android:hint="제목을 입력하세요"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/phonelable" />
 
@@ -108,10 +108,10 @@
                 android:text="내용 작성하기"
                 android:textSize="23dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/OptionalPhoneNumber" />
+                app:layout_constraintTop_toBottomOf="@+id/title" />
 
             <EditText
-                android:id="@+id/StoryBox"
+                android:id="@+id/content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
