--- a/app/src/main/res/layout/report_listview.xml
+++ b/app/src/main/res/layout/report_listview.xml
@@ -12,15 +12,38 @@
         android:layout_marginTop="20dp"
         />
 
-    <ImageView
-        android:id="@+id/percent"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/percent"
-        app:layout_constraintLeft_toLeftOf="@id/mainview"
+    <ProgressBar
+        android:id="@+id/progressBarCircle"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/drawable_circle_inner"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="100"
+        android:progressDrawable="@drawable/drawable_circle_outer"
+        android:rotation="-90"
         app:layout_constraintTop_toTopOf="@id/mainview"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/mainview"
         app:layout_constraintBottom_toBottomOf="@id/mainview"
-        android:layout_marginLeft="30dp"/>
+        app:layout_constraintVertical_bias="0.25" />
+
+    <TextView
+        android:id="@+id/riskyPercent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="100%"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressBarCircle"
+        app:layout_constraintEnd_toEndOf="@+id/progressBarCircle"
+        app:layout_constraintStart_toStartOf="@+id/progressBarCircle"
+        app:layout_constraintTop_toTopOf="@+id/progressBarCircle" />
+
 
     <TextView
         android:id="@+id/phonenumber"
@@ -30,9 +53,9 @@
         android:text="01012345678"
         android:textStyle="bold"
         android:textSize="25dp"
-        app:layout_constraintTop_toTopOf="@+id/percent"
+        app:layout_constraintTop_toTopOf="@id/progressBarCircle"
         app:layout_constraintBottom_toTopOf="@id/type"
-        app:layout_constraintLeft_toRightOf="@id/percent"
+        app:layout_constraintLeft_toRightOf="@id/progressBarCircle"
         android:layout_marginLeft="20dp"/>
 
     <TextView
@@ -45,7 +68,7 @@
         android:textSize="17dp"
         app:layout_constraintTop_toBottomOf="@+id/phonenumber"
         app:layout_constraintBottom_toBottomOf="@id/reportedtimes"
-        app:layout_constraintLeft_toRightOf="@id/percent"
+        app:layout_constraintLeft_toRightOf="@id/progressBarCircle"
         android:layout_marginLeft="20dp"/>
 
     <TextView
@@ -57,8 +80,8 @@
         android:textStyle="italic"
         android:textSize="17dp"
         app:layout_constraintTop_toBottomOf="@+id/type"
-        app:layout_constraintBottom_toBottomOf="@id/percent"
-        app:layout_constraintLeft_toRightOf="@id/percent"
+        app:layout_constraintBottom_toBottomOf="@id/progressBarCircle"
+        app:layout_constraintLeft_toRightOf="@id/progressBarCircle"
         android:layout_marginLeft="20dp"/>
 
     <Button
