--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -60,7 +60,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constrainedHeight="true"
+        android:id="@+id/recycler_view"
+        app:layout_constraintTop_toBottomOf="@id/TopView"
+        app:layout_constraintBottom_toTopOf="@id/sendMessage"/>
+
+
     <LinearLayout
+        android:id="@+id/sendMessage"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:orientation="horizontal"
@@ -75,7 +85,7 @@
             android:layout_marginLeft="10dp"
             android:ems="10"
             android:inputType="text"
-            android:text="궁금한 점을 입력해주세요"
+            android:hint="궁금한 점을 입력해주세요"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
