--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -57,13 +57,17 @@
         app:layout_constraintBottom_toTopOf="@id/logout"
         />
 
-    <ImageButton
+    <Button
         android:id="@+id/logout"
-        android:background="@android:color/transparent"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/logoutbtn"
+        android:text="로그아웃"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:backgroundTint="#85B6C6"
         app:layout_constraintTop_toBottomOf="@id/settings_fragment"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
