--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -99,12 +99,11 @@
         android:layout_height="80dp"
         android:scaleType="centerInside"
         android:src="@drawable/plusbtn"
-        android:background="@color/cardview_shadow_end_color"
+        android:background="@android:color/transparent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp"
-        android:layout_marginRight="30dp" />
+        android:layout_marginBottom="100dp"/>
 
 
 
