--- a/app/src/main/res/layout/community_writing.xml
+++ b/app/src/main/res/layout/community_writing.xml
@@ -68,7 +68,8 @@
         android:layout_height="wrap_content"
         android:fillViewport="true"
         android:scrollbars="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/TopView">
+        app:layout_constraintTop_toBottomOf="@+id/TopView"
+        tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="60dp"
                 android:layout_marginTop="30dp"
-                android:text="번호 (선택)"
+                android:text="제목"
                 android:textSize="23dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/TopView" />
@@ -96,6 +97,30 @@
                 android:layout_marginEnd="60dp"
                 android:width="300dp"
                 android:hint="제목을 입력하세요"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/phonelable" />
+
+            <TextView
+                android:id="@+id/phoneNumberLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginTop="30dp"
+                android:text="(선택) 신고한 번호"
+                android:textSize="23dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/TopView" />
+
+            <EditText
+                android:id="@+id/phoneNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="60dp"
+                android:width="300dp"
+                android:hint="신고한 번호를 입력하세요"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/phonelable" />
 
@@ -144,8 +169,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
