--- a/app/src/main/res/layout/qna_listview.xml
+++ b/app/src/main/res/layout/qna_listview.xml
@@ -40,28 +40,15 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/editbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="수정"
-        android:clickable="true"
-        android:textColor="#85B6C6"
-        android:background="#00ff0000"
-        android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="@id/mainview"
-        app:layout_constraintRight_toLeftOf="@id/deletebtn"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/deletebtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="삭제"
+    <ImageButton
+        android:id="@+id/editbtn"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/edit"
+        android:background="@android:color/transparent"
         android:clickable="true"
-        android:textColor="#E76363"
-        android:background="#00ff0000"
         android:textSize="15dp"
         app:layout_constraintTop_toTopOf="@id/mainview"
         app:layout_constraintRight_toRightOf="parent"
