--- a/app/src/main/res/layout/report_listview.xml
+++ b/app/src/main/res/layout/report_listview.xml
@@ -12,37 +12,6 @@
         android:layout_marginTop="20dp"
         />
 
-    <ProgressBar
-        android:id="@+id/progressBarCircle"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/drawable_circle_inner"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="100"
-        android:progressDrawable="@drawable/drawable_circle_outer"
-        android:rotation="-90"
-        app:layout_constraintTop_toTopOf="@id/mainview"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/mainview"
-        app:layout_constraintBottom_toBottomOf="@id/mainview"
-        app:layout_constraintVertical_bias="0.25" />
-
-    <TextView
-        android:id="@+id/riskyPercent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="100%"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBarCircle"
-        app:layout_constraintEnd_toEndOf="@+id/progressBarCircle"
-        app:layout_constraintStart_toStartOf="@+id/progressBarCircle"
-        app:layout_constraintTop_toTopOf="@+id/progressBarCircle" />
 
 
     <TextView
@@ -53,9 +22,9 @@
         android:text="01012345678"
         android:textStyle="bold"
         android:textSize="25dp"
-        app:layout_constraintTop_toTopOf="@id/progressBarCircle"
+        app:layout_constraintTop_toTopOf="@id/mainview"
         app:layout_constraintBottom_toTopOf="@id/type"
-        app:layout_constraintLeft_toRightOf="@id/progressBarCircle"
+        app:layout_constraintLeft_toLeftOf="@id/mainview"
         android:layout_marginLeft="20dp"/>
 
     <TextView
@@ -67,42 +36,30 @@
         android:textStyle="italic"
         android:textSize="17dp"
         app:layout_constraintTop_toBottomOf="@+id/phonenumber"
-        app:layout_constraintBottom_toBottomOf="@id/reportedtimes"
-        app:layout_constraintLeft_toRightOf="@id/progressBarCircle"
+        app:layout_constraintBottom_toBottomOf="@id/reportContent"
+        app:layout_constraintLeft_toLeftOf="@id/mainview"
         android:layout_marginLeft="20dp"/>
 
     <TextView
-        android:id="@+id/reportedtimes"
+        android:id="@+id/reportContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:text="00건"
+        android:text="hello"
         android:textStyle="italic"
         android:textSize="17dp"
         app:layout_constraintTop_toBottomOf="@+id/type"
-        app:layout_constraintBottom_toBottomOf="@id/progressBarCircle"
-        app:layout_constraintLeft_toRightOf="@id/progressBarCircle"
+        app:layout_constraintBottom_toBottomOf="@id/mainview"
+        app:layout_constraintLeft_toLeftOf="@id/mainview"
         android:layout_marginLeft="20dp"/>
 
-    <Button
+
+    <ImageButton
         android:id="@+id/editbtn"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:text="수정"
-        android:clickable="true"
-        android:textColor="#85B6C6"
-        android:background="#00ff0000"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/mainview"
-        app:layout_constraintRight_toLeftOf="@id/deletebtn"
-        android:layout_marginTop="20dp"/>
-
-    <Button
-        android:id="@+id/deletebtn"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-
-        android:text="삭제"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/edit"
         android:clickable="true"
         android:textColor="#E76363"
         android:background="#00ff0000"
@@ -110,6 +67,7 @@
         app:layout_constraintBottom_toBottomOf="@id/mainview"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"/>
 
 
