--- a/app/src/main/res/layout/reportedit.xml
+++ b/app/src/main/res/layout/reportedit.xml
@@ -81,7 +81,7 @@
                 android:id="@+id/phonelable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="번호 (선택)"
+                android:text="번호"
                 android:textSize="23dp"
                 app:layout_constraintTop_toBottomOf="@+id/TopView"
                 android:layout_marginTop="30dp"
@@ -89,7 +89,7 @@
                 android:layout_marginStart="60dp"/>
 
             <EditText
-                android:id="@+id/OptionalPhoneNumber"
+                android:id="@+id/phoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -135,7 +135,7 @@
                 android:layout_marginStart="60dp"/>
 
             <EditText
-                android:id="@+id/StoryBox"
+                android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="내용을 입력하세요"
