--- a/app/src/main/res/layout/reportpage.xml
+++ b/app/src/main/res/layout/reportpage.xml
@@ -81,7 +81,7 @@ s
                 android:id="@+id/phonelable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="번호 (선택)"
+                android:text="번호"
                 android:textSize="23dp"
                 app:layout_constraintTop_toBottomOf="@+id/TopView"
                 android:layout_marginTop="30dp"
