--- a/app/src/main/res/layout/community_post.xml
+++ b/app/src/main/res/layout/community_post.xml
@@ -62,10 +62,12 @@
         app:layout_constraintHorizontal_bias="0.9" />
 
     <ScrollView
-        android:layout_width="411dp"
-        android:layout_height="621dp"
+        android:id="@id/scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@id/replyComponents"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -95,45 +97,49 @@
                     app:civ_border_overlay="true" />
 
                 <TextView
-                    android:id="@+id/nameview"
+                    android:id="@+id/writer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:text="닉네임"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
-                <Button
-                    android:id="@+id/editbtn"
-                    android:layout_width="65dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="160dp"
-                    android:layout_marginTop="5dp"
-                    android:background="#00FF0000"
-                    android:text="수정"
-                    android:textColor="#03A9F4" />
 
-                <Button
-                    android:id="@+id/delbtn"
-                    android:layout_width="65dp"
-                    android:layout_height="48dp"
+                <ImageButton
+                    android:id="@+id/editbtn"
+                    android:layout_width="30dp"
+                    android:layout_height="20dp"
+                    android:scaleType="centerInside"
                     android:layout_marginTop="5dp"
-                    android:background="#00FF0000"
-                    android:text="삭제"
-                    android:textColor="#F44336" />
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/edit"
+                    android:layout_marginLeft="280dp"
+                     />
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/posttext"
+                android:id="@+id/title"
+                android:layout_width="365dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/content"
                 android:layout_width="365dp"
                 android:layout_height="145dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:text="보이스피싱 어쩌구 위험 어쩌구 보이스피싱 어쩌구 위험 어쩌구"
+                android:text=""
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -153,12 +159,12 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/bannum"
+                    android:id="@+id/reportNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="200dp"
                     android:layout_marginTop="10dp"
-                    android:text="01012345678"
+                    android:text=""
                     android:textColor="#CCF44336"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -185,18 +191,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <ListView
                     android:id="@+id/replylist"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content"
+                    />
             </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
-
     <LinearLayout
+        android:id="@+id/replyComponents"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
@@ -204,21 +213,23 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <EditText
-            android:id="@+id/add_replytext"
+            android:id="@+id/replyContent"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
             android:ems="10"
             android:inputType="text"
-            android:text="댓글을 입력해주세요" />
+            android:hint="댓글을 입력해주세요" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/replyButton"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginStart="3dp"
             android:contentDescription="addreplybutton"
             app:srcCompat="@android:drawable/ic_menu_send" />
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
