--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lietectorblue">#28BEEE</color>
+    <color name="lietectorred">#E76363</color>
+    <color name="lietectordarklightblue">#85B6C6</color>
+
 </resources>
